feat(frontend): implementar lista e formulário de tarefas
- Implementados ListTarefas e FormTarefas com integração com TarefaService
- Adicionados modelos, enums e DTOs necessários
- Configurado SCSS global e estrutura inicial do frontend
- Funcionalidade de listagem, filtros e paginação funcionando

⚠️ Observação: ainda há um bug de importação de estilos do PrimeNG (theme e core CSS) que precisa ser resolvido